--- a/config/pipeline_config.yaml
+++ b/config/pipeline_config.yaml
@@ -1,10 +1,10 @@
-# ML Pipeline Configuration
+# ML Pipeline Configuration - Forecasting with Vertex AI
 
 # Data Processing Parameters
 data_processing:
-  sample_size: 1000000
+  sample_size: 1000000         # Optionnel pour les tests locaux
   random_seed: 42
-  train_test_split: 0.8
+  train_test_split: 0.8        # Peut être ignoré si Vertex AI gère les splits
   validation_split: 0.1
 
 # Feature Engineering
@@ -13,42 +13,47 @@ feature_engineering:
     - hour
     - day_of_week
     - month
-    - season
+    - day_of_year
+    - is_weekend
   spatial_features:
-    - distance
-    - pickup_zone
-    - dropoff_zone
-  weather_features:
+    - pickup_community_area
+  exogenous_features:
     - temperature
     - precipitation
     - wind_speed
 
+# Forecasting Configuration
 forecasting:
   time_column: timestamp_hour
   target_column: trip_count
-  time_granularity: "hour"
   context_column: pickup_community_area
+  time_granularity: "hour"
   forecast_horizon: 24
-  window_size: 168
+  window_size: 168              # Taille du contexte historique utilisé
+  available_at_forecast: []     # Ex: météo future
+  unavailable_at_forecast:      # Connues seulement dans le passé
+    - trip_count
+  data_granularity_unit: hour
 
-# Model Parameters
-model:
-  type: "xgboost"
-  params:
-    max_depth: 6
-    learning_rate: 0.1
-    n_estimators: 100
-    objective: "reg:squarederror"
-    eval_metric: "rmse"
+# Vertex AI Forecast Model Parameters
+vertex_ai_forecast:
+  display_name: "chicago_taxi_forecast_model"
+  optimization_objective: "minimize-rmse"
+  budget_milli_node_hours: 1000    # ~1h d'entraînement
+  column_transformations:
+    timestamp_hour: "timestamp"
+    pickup_community_area: "categorical"
+    trip_count: "numeric"
+    hour: "numeric"
+    day_of_week: "categorical"
+    month: "categorical"
+    day_of_year: "numeric"
+    is_weekend: "categorical"
+    temperature: "numeric"
+    precipitation: "numeric"
+    wind_speed: "numeric"
 
-# Training Parameters
-training:
-  batch_size: 32
-  epochs: 100
-  early_stopping_rounds: 10
-  validation_frequency: 1
-
-# Evaluation Metrics
+# Evaluation Metrics (après prédiction)
 evaluation:
   metrics:
     - rmse
@@ -59,7 +64,7 @@ evaluation:
     mae: 4.0
     r2: 0.7
 
-# Deployment Parameters
+# Deployment Parameters (si modèle batch ou endpoint)
 deployment:
   model_name: "chicago_taxi_demand"
   version: "v1"
@@ -67,7 +72,7 @@ deployment:
   max_instances: 10
   machine_type: "n1-standard-2"
 
-# Monitoring
+# Monitoring Thresholds
 monitoring:
   prediction_threshold: 1000
   error_rate_threshold: 0.05
@@ -79,4 +84,4 @@ resources:
   cpu: 2
   memory: "8Gi"
   gpu: 0
-  storage: "100Gi" 
+  storage: "100Gi"
