--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,16 @@ pyyaml>=6.0.0
 pytest>=7.3.0 
 missingno>=0.5.0
 pandas-gbq>=1.0.0
-mpl_toolkits.basemap
-google-cloud-bigquery 
-holidays
+# mpl_toolkits.basemap is part of matplotlib
+google-cloud-bigquery>=3.11.0
+holidays>=0.30.0
 google-cloud-aiplatform>=1.36.0
 kfp>=2.5.0
+# Additional dependencies found in code
+apache-beam>=2.45.0
+fastapi>=0.100.0
+pydantic>=2.0.0
+google-cloud-pipeline-components>=0.1.0
+xgboost>=2.0.0
+# Fix for kfp v2 deprecation
+kfp-sdk>=2.5.0
