--- a/requirements.txt
+++ b/requirements.txt
@@ -109,7 +109,7 @@ pluggy==1.5.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 proto-plus==1.26.1
-protobuf==4.25.6
+protobuf<5.0.0
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -159,7 +159,7 @@ typing-inspection==0.4.0
 typing_extensions==4.13.0
 tzdata==2025.2
 uri-template==1.3.0
-urllib3==1.26.20
+urllib3<2.0.0
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
