--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
-click==8.1.8
+click>=8.0.0,<9.0.0
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
@@ -76,11 +76,11 @@ jupyterlab==4.3.6
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
-kfp==2.10.1
-kfp-pipeline-spec==0.5.0
-kfp-server-api==2.3.0
+kfp==2.12.1
+kfp-pipeline-spec==0.6.0
+kfp-server-api>=2.1.0,<2.5.0
 kiwisolver==1.4.8
-kubernetes==30.1.0
+kubernetes>=8.0.0,<31.0.0
 MarkupSafe==3.0.2
 matplotlib==3.8.4
 matplotlib-inline==0.1.7
@@ -109,7 +109,7 @@ pluggy==1.5.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 proto-plus==1.26.1
-protobuf<5.0.0
+protobuf>=4.21.1,<5.0.0
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -128,12 +128,12 @@ pytest==8.3.5
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 pytz==2025.2
-PyYAML==6.0.2
+PyYAML>=5.3,<7.0.0
 pyzmq==26.3.0
 referencing==0.36.2
 requests==2.32.3
 requests-oauthlib==2.0.0
-requests-toolbelt==0.10.1
+requests-toolbelt>=0.8.0,<2.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.24.0
@@ -148,7 +148,7 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
-tabulate==0.9.0
+tabulate>=0.8.6,<1.0.0
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
