--- a/config/pipeline_config.yaml
+++ b/config/pipeline_config.yaml
@@ -37,6 +37,7 @@ forecasting:
     - hour
     - month
     - is_weekend
+    - is_holiday
     - temperature
     - precipitation
     - wind_speed
@@ -62,6 +63,13 @@ vertex_ai_forecast:
     temperature: "numeric"
     precipitation: "numeric"
     wind_speed: "numeric"
+
+  predefined_split_column_name: null
+  time_column: "timestamp_hour"
+  time_series_identifier_column: "pickup_community_area"
+  training_fraction_split: 0.8
+  validation_fraction_split: 0.1
+  test_fraction_split: 0.1
 
 # Evaluation Metrics (après prédiction)
 evaluation:
