--- a/requirements.txt
+++ b/requirements.txt
@@ -152,6 +152,7 @@ tabulate>=0.8.6,<1.0.0
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
+tqdm
 tornado==6.4.2
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20241206
