--- a/config/pipeline_config.yaml
+++ b/config/pipeline_config.yaml
@@ -1,10 +1,9 @@
-# ML Pipeline Configuration - Forecasting with Vertex AI
+# Configuration for Custom Training + HPT Pipeline
 
 gcp:
-  project_id: "avisia-certification-ml-yde"
-  region: "europe-west1"
-  dataset_id: "chicago_taxi_data"
-
+  project_id: "avisia-certification-ml-yde" # Replace with your project ID
+  region: "europe-west1" 
+  staging_bucket: "gs://your-gcs-bucket-name/staging" # IMPORTANT: Replace with your GCS bucket URI
 
 bigquery:
   dataset_id: "chicago_taxis" # Dataset for pipeline outputs (training table, prediction input/output)
@@ -38,15 +37,16 @@ forecasting:
     end_date: "2023-11-22" # Date de fin souhaitée pour les données d'entraînement/test
     max_data_points: 2950 
 data_preprocessing:
-  sql_template_path: "src/data_preprocessing/bigquery_queries.sql"
+  sql_template_path: "src/pipelines/components/preprocessing/bigquery_queries.sql"
   time_window:
     end_date_str: "2023-11-22" # End date for training data generation
     max_data_points: 2950 # Max number of hours per series for training data
-# Vertex AI Forecast Model Parameters
+
+    # Vertex AI Forecast Model Parameters
 vertex_ai_forecast:
   display_name: "chicago_taxi_forecast_model"
   optimization_objective: "minimize-rmse"
-  budget_milli_node_hours: 8000    # ~1h d'entraînement
+  budget_milli_node_hours: 1000    # ~1h d'entraînement
   column_transformations:
     timestamp_hour: "timestamp"
     pickup_community_area: "categorical"
@@ -61,60 +61,92 @@ vertex_ai_forecast:
     year: "numeric"
 
 
-  hyperparameters:
-    learning_rate: 0.01
-    batch_size: 32
-    num_epochs: 50
-    early_stopping: true
-    patience: 5
-    dropout_rate: 0.2
-  model_type: "ARIMA"           # Choix du modèle
-  model_selection:
-    - "AutoML"
-    - "XGBoost"
-    - "ARIMA"
-    - "Prophet"
-  model_selection_criteria: "rmse" # Critère de sélection du modèle
-  model_selection_timeout: 3600   # Timeout pour la sélection du modèle
-  model_selection_max_trials: 10  # Nombre maximum d'essais pour la sélection du modèle
-  model_selection_max_parallel_trials: 2 # Nombre maximum d'essais parallèles
+custom_training:
+  # Static arguments passed to the training script (train_xgboost_hpt.py)
+  static_args:
+    time_column: "timestamp_hour"
+    target_column: "trip_count"
+    series_id_column: "pickup_community_area"
+    feature_columns: # List of features used by the model
+      - "hour"
+      - "day_of_week"
+      - "month"
+      - "year"
+      - "day_of_year"
+      - "week_of_year"
+      - "is_weekend"
+      - "hour_sin"
+      - "hour_cos"
+      - "pickup_community_area"
+      - "is_holiday" # Add if generated and used
+    train_ratio: 0.85 # Fraction for train/validation split within the script
 
-  predefined_split_column_name: null
-  time_column: "timestamp_hour"
-  time_series_identifier_column: "pickup_community_area"
-  training_fraction_split: 0.8
-  validation_fraction_split: 0.1
-  test_fraction_split: 0.1
+  # Worker pool specification for the training job (run by HPT)
+  worker_pool_spec:
+    machine_type: "n1-standard-4" # Machine type for training
+    # IMPORTANT: Replace with the URI of your custom training container image in Artifact Registry
+    container_uri: "europe-west1-docker.pkg.dev/your-project-id/your-repo-name/your-image-name:latest"
+    replica_count: 1 # Must be 1 for HPT master worker
 
-# Evaluation Metrics (après prédiction)
-evaluation:
-  metrics:
-    - rmse
-    - mae
-    - r2
-  threshold:
-    rmse: 5.0
-    mae: 4.0
-    r2: 0.7
+hyperparameter_tuning:
+  display_name_prefix: "hpt_xgboost_taxi"
+  metric_tag: "rmse" # Metric reported by the training script
+  metric_goal: "MINIMIZE" # Goal for the metric (MINIMIZE or MAXIMIZE)
+  max_trial_count: 20 # Total number of trials
+  parallel_trial_count: 4 # Number of trials to run in parallel
+  search_algorithm: "RANDOM_SEARCH" # "RANDOM_SEARCH", "GRID_SEARCH", "BAYESIAN_OPTIMIZATION"
 
-# Deployment Parameters (si modèle batch ou endpoint)
-deployment:
-  model_name: "chicago_taxi_demand"
-  version: "v1"
-  min_instances: 1
-  max_instances: 10
-  machine_type: "n1-standard-2"
+  # Parameter specification for HPT
+  parameter_spec:
+    learning_rate:
+      parameter_id: "learning_rate"
+      type: "DOUBLE"
+      scale_type: "SCALE_TYPE_LOG"
+      min_value: 0.001
+      max_value: 0.1
+    n_estimators:
+      parameter_id: "n_estimators"
+      type: "INTEGER"
+      scale_type: "UNIT_LINEAR_SCALE"
+      min_value: 50
+      max_value: 500
+    max_depth:
+      parameter_id: "max_depth"
+      type: "INTEGER"
+      scale_type: "UNIT_LINEAR_SCALE"
+      min_value: 3
+      max_value: 10
+    subsample:
+      parameter_id: "subsample"
+      type: "DOUBLE"
+      scale_type: "UNIT_LINEAR_SCALE"
+      min_value: 0.5
+      max_value: 1.0
+    colsample_bytree:
+      parameter_id: "colsample_bytree"
+      type: "DOUBLE"
+      scale_type: "UNIT_LINEAR_SCALE"
+      min_value: 0.5
+      max_value: 1.0
+    # Add other hyperparameters to tune here, matching args in train_xgboost_hpt.py
 
-# Monitoring Thresholds
-monitoring:
-  prediction_threshold: 1000
-  error_rate_threshold: 0.05
-  latency_threshold: 200  # ms
-  alert_email: "alerts@example.com"
+batch_prediction:
+  job_display_name_prefix: "batch_pred_taxi"
+  # Optional: Specify machine type if needed, otherwise defaults are used
+  # machine_type: "n1-standard-4"
+  # Optional: Specify starting/max replica count if needed
+  # starting_replica_count: 1
+  # max_replica_count: 5
+  generate_explanation: false # Whether to generate explanations
 
-# Resources
-resources:
-  cpu: 2
-  memory: "8Gi"
-  gpu: 0
-  storage: "100Gi"
+# Optional: Model Registry configuration
+model_registry: 
+  model_display_name_prefix: "chicago_taxi_forecast_model"
+  # If the training script saves the model, specify the serving container
+  # serving_container_image_uri: "europe-west1-docker.pkg.dev/your-project-id/your-repo-name/your-serving-image:latest"
+
+# Optional: Parameters for generate_forecast_input.py if run separately or via KFP component
+forecast_input_generation:
+  horizon_hours: 24 # Number of future hours to generate input data for
+  forecast_start_time: "2023-11-22T00:00:00Z" # Start time for the forecast
+  forecast_horizon_hours: 24 # Number of hours to forecast
